# parallel-io-channles

./: Cargo.toml  Readme.md  l  l.txt  log  multi_read_exact_in_progress.rs  x
.github/workflows/: rust.yml
examples/: example_parallel_read.rs  example_parallel_write.rs  parallel_read.rs  parallel_write.rs
src/: lib.rs  main.rs  par_read.rs  par_write.rs  read.rs  write.rs
tests/: read-write.rs  read.rs
