[package]
name = "par_io"
version = "0.3.3"
authors = ["Ugo Varetto <ugovaretto@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.60"
description = "Parallel, async file I/O library"
#repository = ""
#homepage = ""
readme = "Readme.md"
#documentation = ""
#keywords = []
#categories = []

[dependencies]

[features]
print_ptr = [] # print buffer memory address to verify that no new allocation happens
